<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/first_throw_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_throw"
            android:textSize="@dimen/darts" />

        <TextView
            android:id="@+id/second_throw_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_throw"
            android:textSize="@dimen/darts" />

        <TextView
            android:id="@+id/third_throw_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_throw"
            android:textSize="@dimen/darts" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/total_score"
        android:textSize="@dimen/total_score" />

    <TextView
        android:id="@+id/round_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/round_count"
        android:textSize="@dimen/round_count" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_next" />

</RelativeLayout>
